--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="menu_settings">Settings</string>
-    <string name="title_activity_example">Example</string>
-    <string name="app_name">AndroidFoursquareClient</string> 
-    <string name="foursquare_oauth_login">Foursquare OAuth Login</string>
-    <string name="pick_a_place">Pick a place</string> 
+    <string name="app_name">FoursquareAndroid</string>
+    <string name="foursquare_place_show_on_map">Show on map</string>
+    <string name="foursquare_place_checkin">Checkin</string>
     <string name="no_address_info_found">No address info found.</string>
-
+    <string name="checkin_msg">Checking in from Android app</string>
 </resources>
